2010-06-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't set previousUri_ to "" on redirect.
	* src/Request.cc: redirectUri()

2010-06-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Return given hostname if hostname is numeric host.
	* src/AbstractCommand.cc: resolveHostname()

2010-06-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed Peer::updateSeeder() to reflect current bitfield.
	* src/Peer.cc

2010-06-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code cleanup
	* src/util.cc

2010-06-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused getOverflow(). Added assertion in
	PiecedSegment::updateWrittenLength() to check updated written
	length does not exceed piece length.
	* src/GrowSegment.h
	* src/PiecedSegment.cc
	* src/PiecedSegment.h
	* src/Segment.h
	* test/SegmentTest.cc

2010-06-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Return null if written length > 0 even if SegmentEntry->cuid
	equals given cuid.
	* src/SegmentMan.cc

2010-06-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compiler warning without bittorrent support
	* src/RequestGroup.cc

2010-06-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Run whole checksum check when download file name and size are
	determined and download is already completed. Related to r2221.
	Guarded ENABLE_MESSAGE_DIGEST where necessary.
	* src/AbstractCommand.cc
	* src/RequestGroup.cc
	* src/message.h

2010-06-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made log and log-level option modifiable using
	aria2.changeGlobalOption. This means you can dynamically start or
	stop logging and change log file and log level.
	* doc/aria2c.1.txt
	* src/LogFactory.cc
	* src/LogFactory.h
	* src/LogFormatter.h
	* src/Logger.cc
	* src/Logger.h
	* src/Makefile.am
	* src/Makefile.in
	* src/SimpleLogFormatter.cc
	* src/SimpleLogFormatter.h
	* src/SimpleLogger.cc: Removed