@@ -3064,13 +3064,23 @@ GID
 <div class="paragraph"><p>This method adds new HTTP(S)/FTP/BitTorrent Magnet URI.  <em>uris</em> is of
 type array and its element is URI which is of type string.  For
 BitTorrent Magnet URI, <em>uris</em> must have only one element and it should
-be BitTorrent Magnet URI.  <em>options</em> is of type struct and its members
-are a pair of option name and value. See <strong>Options</strong> below for more
-details.  If <em>position</em> is given as an integer starting from 0, the
-new download is inserted at <em>position</em> in the waiting queue. If
-<em>position</em> is not given or <em>position</em> is larger than the size of the
-queue, it is appended at the end of the queue.  This method returns
-GID of registered download.</p></div>
+be BitTorrent Magnet URI.  URIs in <em>uris</em> must point to the same
+file. For example, a file <em>chunkybaconlinux.iso</em> is hosted in 2
+locations: <a href="http://server/chunkybaconlinux.iso">http://server/chunkybaconlinux.iso</a> and
+<a href="http://mirror/chunkybaconlinux.iso">http://mirror/chunkybaconlinux.iso</a>.  You can download this iso image
+using 2 URIs issuing
+aria2.addUri([<em>http://server/chunkybaconlinux.iso</em>,
+<em>http://mirror/chunkybaconlinux.iso</em>]).  Imagine there is an another
+file URI, say, <a href="http://mirror2/chunkydonutslinux.iso">http://mirror2/chunkydonutslinux.iso</a>, which is
+different iso image.  You cannot mix this URI with previous URIs in
+one aria2.addUri command.  If you do, aria2 does not complain but
+download may fail.  <em>options</em> is of type struct and its members are a
+pair of option name and value. See <strong>Options</strong> below for more details.
+If <em>position</em> is given as an integer starting from 0, the new download
+is inserted at <em>position</em> in the waiting queue. If <em>position</em> is not
+given or <em>position</em> is larger than the size of the queue, it is
+appended at the end of the queue.  This method returns GID of
+registered download.</p></div>
 <div class="paragraph"><p><strong>aria2.addTorrent</strong> <em>torrent[, uris[, options[, position]]]</em></p></div>
 <div class="paragraph"><p>This method adds BitTorrent download by uploading .torrent file.  If
 you want to add BitTorrent Magnet URI, use <strong>aria2.addUri</strong> method
@@ -4202,7 +4212,7 @@ files in the program, then also delete it here.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2010-06-23 23:10:50 JST
+Last updated 2010-06-28 21:00:35 JST
 </div>
 </div>
 </body>
